Fixed scaling issues with the popup, which is now aligned to top of screen

--- a/src/Popup.css
+++ b/src/Popup.css
@@ -1,12 +1,6 @@
 .Popup {
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
   margin: auto;
-  width: 50vw;
-  height: 50vh;
   z-index: 1; /*So that the div below the popup can be queried to see if the 
                 popup should be hidden*/
 }
